# simple-a2a

./: .env.example  .gitignore  README.md  blogging_agent.py  index.html  llms.txt  pyproject.toml  start_all.sh
.github/: copilot-instructions.md
critic/: __main__.py  agent.py  agent_executor.py  pyproject.toml
writer/: __main__.py  agent.py  agent_executor.py  pyproject.toml
